GRULIBNOTI-2 : surcharge URL

--- a/webapp/WEB-INF/conf/plugins/librarynotifygru.properties
+++ b/webapp/WEB-INF/conf/plugins/librarynotifygru.properties
@@ -6,6 +6,5 @@ library-notifygru.pageTitle=librarynotifygru
 library-notifygru.pagePathLabel=librarynotifygru
 
 
-library-notifygru.urlNotificationEndpoint=http://dev.lutece.paris.fr/poc/api/dev/notification/v1/send
-library-notifygru.urlApiManager=http://dev.lutece.paris.fr/poc/api/token
-library-notifygru.NotificationSender.instance=Poc GRU prod
+library-notifygru.urlNotificationEndpoint=
+library-notifygru.urlApiManager=
