--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,12 @@
 	<artifactId>jackson-databind</artifactId>
 	<version>2.7.4</version>
        </dependency>
-
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.4.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <properties>
