--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>library-notifygru</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>Lutece library notifygru </name>
 
     <repositories>
@@ -62,7 +62,7 @@
         <connection>scm:git:https://github.com/lutece-secteur-public/gru-library-notifygru.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-secteur-public/gru-library-notifygru.git</developerConnection>
         <url>https://github.com/lutece-secteur-public/gru-library-notifygru.git</url>
-        <tag>gru-library-notifygru-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
