--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>library-notifygru</artifactId>
-    <packaging>lutece-plugin</packaging>
+	<packaging>jar</packaging>
     <version>1.1.0-SNAPSHOT</version>
     <name>Lutece library notifygru </name>
 
@@ -23,32 +23,76 @@
     </repositories>
 
     <dependencies>
+        
         <dependency>
-            <groupId>fr.paris.lutece</groupId>
-            <artifactId>lutece-core</artifactId>
-            <version>[5.0.0,)</version>
-            <type>lutece-core</type>
-        </dependency>        
-       
-         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>library-httpaccess</artifactId>
             <version>[2.4.1-SNAPSHOT,)</version>
             <type>jar</type>
         </dependency>
-   
-      
+
+        <!-- JSON -->
         <dependency>
-	<groupId>com.fasterxml.jackson.core</groupId>
-	<artifactId>jackson-databind</artifactId>
-	<version>2.1.4</version>
-       </dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.1.4</version>
+        </dependency>
+        
+        <!-- REST -->
+        <dependency>
+            <groupId>com.sun.jersey.contribs</groupId>
+            <artifactId>jersey-multipart</artifactId>
+            <version>1.18.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-json</artifactId>
+            <version>1.18.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>1.18.1</version>
+            <type>jar</type>
+        </dependency>
+        
         <dependency>
             <groupId>commons-validator</groupId>
             <artifactId>commons-validator</artifactId>
             <version>1.4.0</version>
             <type>jar</type>
         </dependency>
+        
+        <!-- dépendance pour les tests -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>3.1.0.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>3.1.0.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+            <version>4.11</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
     <properties>
@@ -56,8 +100,7 @@
         <jiraProjectName>GRULIBNOTI</jiraProjectName>
         <jiraComponentId>13253</jiraComponentId>
     </properties>
-    
-        
+
     <scm>
         <connection>scm:git:https://github.com/lutece-secteur-public/gru-library-notifygru.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-secteur-public/gru-library-notifygru.git</developerConnection>
