--- a/pom.xml
+++ b/pom.xml
@@ -27,14 +27,14 @@
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>library-httpaccess</artifactId>
-            <version>[2.4.1-SNAPSHOT,)</version>
+            <version>[2.4.1,)</version>
             <type>jar</type>
         </dependency>        
         
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>library-grubusiness</artifactId>
-            <version>[1.0.1-SNAPSHOT,)</version>
+            <version>[1.0.1,)</version>
             <type>jar</type>
         </dependency>
         
