--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>library-grubusiness</artifactId>
-            <version>[1.0.2,)</version>
+            <version>[1.1.5-SNAPSHOT,)</version>
             <type>jar</type>
         </dependency>
         
