--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>library-httpaccess</artifactId>
-            <version>[2.4.1,)</version>
+            <version>[2.4.1,2.5.3]</version>
             <type>jar</type>
         </dependency>        
         
