--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>library-notifygru</artifactId>
 	<packaging>jar</packaging>
-    <version>1.1.6-SNAPSHOT</version>
+    <version>1.2.0-SNAPSHOT</version>
     <name>Lutece library notifygru </name>
 
     <repositories>
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>library-httpaccess</artifactId>
-            <version>[2.4.1,2.5.3]</version>
+            <version>[2.6.0,)</version>
             <type>jar</type>
         </dependency>        
         
