--- a/pom.xml
+++ b/pom.xml
@@ -34,20 +34,20 @@
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>library-httpaccess</artifactId>
-            <version>[2.6.0,)</version>
+            <version>[2.6.0,3.9.9)</version>
             <type>jar</type>
         </dependency>        
         
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>library-grubusiness</artifactId>
-            <version>[1.1.10,)</version>
+            <version>[1.1.10,1.9.9)</version>
             <type>jar</type>
         </dependency>
         
 
         
-        <!-- dépendance pour les tests -->
+        <!-- d&#233;pendance pour les tests -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
